# pipeline_score

./: CMakeLists.txt  DataStructure.cpp  ReadMe.docx  ScoreManager.cpp  ScoreManager.h  main.cpp
DLLFiles/: CMakeLists.txt  DataStructure.h  Student.h  TimeWork.cpp
